--- a/Graphic/three-study/package.json
+++ b/Graphic/three-study/package.json
@@ -15,6 +15,7 @@
     "three": "^0.146.0"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "dat.gui": "^0.7.9",
     "gsap": "^3.11.3"
   }
