feat:shader basic

--- a/Graphic/three-study/package.json
+++ b/Graphic/three-study/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "source": "src/main/index.html",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-glsl": "^2.7.0",
     "parcel": "^2.7.0",
     "three": "^0.146.0"
   },
